--- a/crazy_raisins.ipynb
+++ b/crazy_raisins.ipynb
@@ -17,9 +17,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "fae4c146",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab10d082",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
    "source": []
   }
  ],
