Load data into analysis notebook

--- a/crazy_raisins.ipynb
+++ b/crazy_raisins.ipynb
@@ -18,20 +18,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ab10d082",
    "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
+    "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "from ucimlrepo import fetch_ucirepo\n",
+    "\n",
+    "raisin = fetch_ucirepo(id=850)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1bf79cc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = raisin.data.features     # the features (7 morphological measurements)  \n",
+    "y = raisin.data.targets      # the class labels (Kecimen vs Besni) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "dbe46c7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'uci_id': 850, 'name': 'Raisin', 'repository_url': 'https://archive.ics.uci.edu/dataset/850/raisin', 'data_url': 'https://archive.ics.uci.edu/static/public/850/data.csv', 'abstract': 'Images of the Kecimen and Besni raisin varieties were obtained with CVS. A total of 900 raisins were used, including 450 from both varieties, and 7 morphological features were extracted.', 'area': 'Biology', 'tasks': ['Classification'], 'characteristics': ['Multivariate'], 'num_instances': 900, 'num_features': 7, 'feature_types': ['Real', 'Integer'], 'demographics': [], 'target_col': ['Class'], 'index_col': None, 'has_missing_values': 'no', 'missing_values_symbol': None, 'year_of_dataset_creation': 2020, 'last_updated': 'Fri Jan 05 2024', 'dataset_doi': '10.24432/C5660T', 'creators': ['İ̇lkay Çinar', 'Murat Koklu', 'Sakir Tasdemir'], 'intro_paper': {'ID': 261, 'type': 'NATIVE', 'title': 'Kuru Üzüm Tanelerinin Makine Görüşü ve Yapay Zeka Yöntemleri Kullanılarak Sınıflandırılması', 'authors': 'İ̇lkay Çinar, Murat Koklu, Sakir Tasdemir', 'venue': 'Gazi Journal of Engineering Sciences', 'year': 2020, 'journal': None, 'DOI': None, 'URL': 'https://www.semanticscholar.org/paper/6e67a463c29bde6a78ead7a10508674e693b74f3', 'sha': None, 'corpus': None, 'arxiv': None, 'mag': None, 'acl': None, 'pmid': None, 'pmcid': None}, 'additional_info': {'summary': 'Images of Kecimen and Besni raisin varieties grown in Turkey were obtained with CVS. A total of 900 raisin grains were used, including 450 pieces from both varieties. These images were subjected to various stages of pre-processing and 7 morphological features were extracted. These features have been classified using three different artificial intelligence techniques.', 'purpose': None, 'funded_by': None, 'instances_represent': None, 'recommended_data_splits': None, 'sensitive_data': None, 'preprocessing_description': None, 'variable_info': '1.) Area: Gives the number of pixels within the boundaries of the raisin.\\n2.) Perimeter: It measures the environment by calculating the distance between the boundaries of the raisin and the pixels around it.\\n3.) MajorAxisLength: Gives the length of the main axis, which is the longest line that can be drawn on the raisin.\\n4.) MinorAxisLength: Gives the length of the small axis, which is the shortest line that can be drawn on the raisin.\\n5.) Eccentricity: It gives a measure of the eccentricity of the ellipse, which has the same moments as raisins.\\n6.) ConvexArea: Gives the number of pixels of the smallest convex shell of the region formed by the raisin.\\n7.) Extent: Gives the ratio of the region formed by the raisin to the total pixels in the bounding box.\\n8.) Class: Kecimen and Besni raisin.', 'citation': 'CINAR I., KOKLU M. and TASDEMIR S., (2020), Classification of Raisin Grains Using Machine Vision and Artificial Intelligence Methods. Gazi Journal of Engineering Sciences, vol. 6, no. 3, pp. 200-209, December, 2020. '}}\n",
+      "              name     role         type demographic  \\\n",
+      "0             Area  Feature      Integer        None   \n",
+      "1  MajorAxisLength  Feature   Continuous        None   \n",
+      "2  MinorAxisLength  Feature   Continuous        None   \n",
+      "3     Eccentricity  Feature   Continuous        None   \n",
+      "4       ConvexArea  Feature      Integer        None   \n",
+      "5           Extent  Feature   Continuous        None   \n",
+      "6        Perimeter  Feature   Continuous        None   \n",
+      "7            Class   Target  Categorical        None   \n",
+      "\n",
+      "                                         description units missing_values  \n",
+      "0  Gives the number of pixels within the boundari...  None             no  \n",
+      "1  It measures the environment by calculating the...  None             no  \n",
+      "2  Gives the length of the main axis, which is th...  None             no  \n",
+      "3  Gives the length of the small axis, which is t...  None             no  \n",
+      "4  It gives a measure of the eccentricity of the ...  None             no  \n",
+      "5  Gives the number of pixels of the smallest con...  None             no  \n",
+      "6  Gives the ratio of the region formed by the ra...  None             no  \n",
+      "7                          Kecimen and Besni raisin.  None             no  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(raisin.metadata)  \n",
+    "print(raisin.variables)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7203cead-8b9e-4e77-9803-26c604e5609a",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python [conda env:craisins]",
+   "language": "python",
+   "name": "conda-env-craisins-py"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
