Added summary and intro with some dataframe analysis

--- a/crazy_raisins.ipynb
+++ b/crazy_raisins.ipynb
@@ -17,8 +17,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "74d2eada",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "A simple classification analysis of two raisin species based on data derived from images."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62fce0ec",
+   "metadata": {},
+   "source": [
+    "## Introduction\n",
+    "Raisins are dried grapes although other small berries and fruit may be dried using the same methodology of raisins. Just like their undried form, raisins of different varieties may differ in taste, chewiness, sweetness, etc. The analysis below will attempt to predict which variety of raisins are based on data derived from multiple images taken of 900 samples. The dataset is obtained from the UCI database archive and contains numeric features all indicating the properties of the sampled raisin."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "ab10d082",
    "metadata": {
     "scrolled": true
@@ -32,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "1bf79cc5",
    "metadata": {},
    "outputs": [],
@@ -43,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "dbe46c7e",
    "metadata": {},
    "outputs": [
@@ -51,38 +69,314 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'uci_id': 850, 'name': 'Raisin', 'repository_url': 'https://archive.ics.uci.edu/dataset/850/raisin', 'data_url': 'https://archive.ics.uci.edu/static/public/850/data.csv', 'abstract': 'Images of the Kecimen and Besni raisin varieties were obtained with CVS. A total of 900 raisins were used, including 450 from both varieties, and 7 morphological features were extracted.', 'area': 'Biology', 'tasks': ['Classification'], 'characteristics': ['Multivariate'], 'num_instances': 900, 'num_features': 7, 'feature_types': ['Real', 'Integer'], 'demographics': [], 'target_col': ['Class'], 'index_col': None, 'has_missing_values': 'no', 'missing_values_symbol': None, 'year_of_dataset_creation': 2020, 'last_updated': 'Fri Jan 05 2024', 'dataset_doi': '10.24432/C5660T', 'creators': ['İ̇lkay Çinar', 'Murat Koklu', 'Sakir Tasdemir'], 'intro_paper': {'ID': 261, 'type': 'NATIVE', 'title': 'Kuru Üzüm Tanelerinin Makine Görüşü ve Yapay Zeka Yöntemleri Kullanılarak Sınıflandırılması', 'authors': 'İ̇lkay Çinar, Murat Koklu, Sakir Tasdemir', 'venue': 'Gazi Journal of Engineering Sciences', 'year': 2020, 'journal': None, 'DOI': None, 'URL': 'https://www.semanticscholar.org/paper/6e67a463c29bde6a78ead7a10508674e693b74f3', 'sha': None, 'corpus': None, 'arxiv': None, 'mag': None, 'acl': None, 'pmid': None, 'pmcid': None}, 'additional_info': {'summary': 'Images of Kecimen and Besni raisin varieties grown in Turkey were obtained with CVS. A total of 900 raisin grains were used, including 450 pieces from both varieties. These images were subjected to various stages of pre-processing and 7 morphological features were extracted. These features have been classified using three different artificial intelligence techniques.', 'purpose': None, 'funded_by': None, 'instances_represent': None, 'recommended_data_splits': None, 'sensitive_data': None, 'preprocessing_description': None, 'variable_info': '1.) Area: Gives the number of pixels within the boundaries of the raisin.\\n2.) Perimeter: It measures the environment by calculating the distance between the boundaries of the raisin and the pixels around it.\\n3.) MajorAxisLength: Gives the length of the main axis, which is the longest line that can be drawn on the raisin.\\n4.) MinorAxisLength: Gives the length of the small axis, which is the shortest line that can be drawn on the raisin.\\n5.) Eccentricity: It gives a measure of the eccentricity of the ellipse, which has the same moments as raisins.\\n6.) ConvexArea: Gives the number of pixels of the smallest convex shell of the region formed by the raisin.\\n7.) Extent: Gives the ratio of the region formed by the raisin to the total pixels in the bounding box.\\n8.) Class: Kecimen and Besni raisin.', 'citation': 'CINAR I., KOKLU M. and TASDEMIR S., (2020), Classification of Raisin Grains Using Machine Vision and Artificial Intelligence Methods. Gazi Journal of Engineering Sciences, vol. 6, no. 3, pp. 200-209, December, 2020. '}}\n",
-      "              name     role         type demographic  \\\n",
-      "0             Area  Feature      Integer        None   \n",
-      "1  MajorAxisLength  Feature   Continuous        None   \n",
-      "2  MinorAxisLength  Feature   Continuous        None   \n",
-      "3     Eccentricity  Feature   Continuous        None   \n",
-      "4       ConvexArea  Feature      Integer        None   \n",
-      "5           Extent  Feature   Continuous        None   \n",
-      "6        Perimeter  Feature   Continuous        None   \n",
-      "7            Class   Target  Categorical        None   \n",
-      "\n",
-      "                                         description units missing_values  \n",
-      "0  Gives the number of pixels within the boundari...  None             no  \n",
-      "1  It measures the environment by calculating the...  None             no  \n",
-      "2  Gives the length of the main axis, which is th...  None             no  \n",
-      "3  Gives the length of the small axis, which is t...  None             no  \n",
-      "4  It gives a measure of the eccentricity of the ...  None             no  \n",
-      "5  Gives the number of pixels of the smallest con...  None             no  \n",
-      "6  Gives the ratio of the region formed by the ra...  None             no  \n",
-      "7                          Kecimen and Besni raisin.  None             no  \n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 900 entries, 0 to 899\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   Area             900 non-null    int64  \n",
+      " 1   MajorAxisLength  900 non-null    float64\n",
+      " 2   MinorAxisLength  900 non-null    float64\n",
+      " 3   Eccentricity     900 non-null    float64\n",
+      " 4   ConvexArea       900 non-null    int64  \n",
+      " 5   Extent           900 non-null    float64\n",
+      " 6   Perimeter        900 non-null    float64\n",
+      "dtypes: float64(5), int64(2)\n",
+      "memory usage: 49.3 KB\n"
      ]
     }
    ],
    "source": [
-    "print(raisin.metadata)  \n",
-    "print(raisin.variables)  "
+    "X.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7203cead-8b9e-4e77-9803-26c604e5609a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Area",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "MajorAxisLength",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "MinorAxisLength",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Eccentricity",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "ConvexArea",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Extent",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Perimeter",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "2d4eb030-3f2c-4df9-898c-895848cc9d44",
+       "rows": [
+        [
+         "count",
+         "900.0",
+         "900.0",
+         "900.0",
+         "900.0",
+         "900.0",
+         "900.0",
+         "900.0"
+        ],
+        [
+         "mean",
+         "87804.12777777777",
+         "430.92995049844444",
+         "254.48813290322227",
+         "0.7815421500333333",
+         "91186.09",
+         "0.6995079264077777",
+         "1165.9066355555556"
+        ],
+        [
+         "std",
+         "39002.11139007148",
+         "116.03512062468943",
+         "49.98890170571764",
+         "0.09031840993160666",
+         "40769.29013198777",
+         "0.053468200288159295",
+         "273.7643154160196"
+        ],
+        [
+         "min",
+         "25387.0",
+         "225.629541",
+         "143.7108718",
+         "0.348729642",
+         "26139.0",
+         "0.379856115",
+         "619.074"
+        ],
+        [
+         "25%",
+         "59348.0",
+         "345.44289779999997",
+         "219.111126475",
+         "0.7417662540000001",
+         "61513.25",
+         "0.67086909675",
+         "966.41075"
+        ],
+        [
+         "50%",
+         "78902.0",
+         "407.80395115",
+         "247.84840865",
+         "0.798846044",
+         "81651.0",
+         "0.7073669579999999",
+         "1119.509"
+        ],
+        [
+         "75%",
+         "105028.25",
+         "494.187013975",
+         "279.8885746",
+         "0.84257102375",
+         "108375.75",
+         "0.73499141725",
+         "1308.38975"
+        ],
+        [
+         "max",
+         "235047.0",
+         "997.2919406",
+         "492.2752785",
+         "0.96212444",
+         "278217.0",
+         "0.835454545",
+         "2697.753"
+        ]
+       ],
+       "shape": {
+        "columns": 7,
+        "rows": 8
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Area</th>\n",
+       "      <th>MajorAxisLength</th>\n",
+       "      <th>MinorAxisLength</th>\n",
+       "      <th>Eccentricity</th>\n",
+       "      <th>ConvexArea</th>\n",
+       "      <th>Extent</th>\n",
+       "      <th>Perimeter</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>900.000000</td>\n",
+       "      <td>900.000000</td>\n",
+       "      <td>900.000000</td>\n",
+       "      <td>900.000000</td>\n",
+       "      <td>900.000000</td>\n",
+       "      <td>900.000000</td>\n",
+       "      <td>900.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>87804.127778</td>\n",
+       "      <td>430.929950</td>\n",
+       "      <td>254.488133</td>\n",
+       "      <td>0.781542</td>\n",
+       "      <td>91186.090000</td>\n",
+       "      <td>0.699508</td>\n",
+       "      <td>1165.906636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>39002.111390</td>\n",
+       "      <td>116.035121</td>\n",
+       "      <td>49.988902</td>\n",
+       "      <td>0.090318</td>\n",
+       "      <td>40769.290132</td>\n",
+       "      <td>0.053468</td>\n",
+       "      <td>273.764315</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>25387.000000</td>\n",
+       "      <td>225.629541</td>\n",
+       "      <td>143.710872</td>\n",
+       "      <td>0.348730</td>\n",
+       "      <td>26139.000000</td>\n",
+       "      <td>0.379856</td>\n",
+       "      <td>619.074000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>59348.000000</td>\n",
+       "      <td>345.442898</td>\n",
+       "      <td>219.111126</td>\n",
+       "      <td>0.741766</td>\n",
+       "      <td>61513.250000</td>\n",
+       "      <td>0.670869</td>\n",
+       "      <td>966.410750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>78902.000000</td>\n",
+       "      <td>407.803951</td>\n",
+       "      <td>247.848409</td>\n",
+       "      <td>0.798846</td>\n",
+       "      <td>81651.000000</td>\n",
+       "      <td>0.707367</td>\n",
+       "      <td>1119.509000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>105028.250000</td>\n",
+       "      <td>494.187014</td>\n",
+       "      <td>279.888575</td>\n",
+       "      <td>0.842571</td>\n",
+       "      <td>108375.750000</td>\n",
+       "      <td>0.734991</td>\n",
+       "      <td>1308.389750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>235047.000000</td>\n",
+       "      <td>997.291941</td>\n",
+       "      <td>492.275279</td>\n",
+       "      <td>0.962124</td>\n",
+       "      <td>278217.000000</td>\n",
+       "      <td>0.835455</td>\n",
+       "      <td>2697.753000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Area  MajorAxisLength  MinorAxisLength  Eccentricity  \\\n",
+       "count     900.000000       900.000000       900.000000    900.000000   \n",
+       "mean    87804.127778       430.929950       254.488133      0.781542   \n",
+       "std     39002.111390       116.035121        49.988902      0.090318   \n",
+       "min     25387.000000       225.629541       143.710872      0.348730   \n",
+       "25%     59348.000000       345.442898       219.111126      0.741766   \n",
+       "50%     78902.000000       407.803951       247.848409      0.798846   \n",
+       "75%    105028.250000       494.187014       279.888575      0.842571   \n",
+       "max    235047.000000       997.291941       492.275279      0.962124   \n",
+       "\n",
+       "          ConvexArea      Extent    Perimeter  \n",
+       "count     900.000000  900.000000   900.000000  \n",
+       "mean    91186.090000    0.699508  1165.906636  \n",
+       "std     40769.290132    0.053468   273.764315  \n",
+       "min     26139.000000    0.379856   619.074000  \n",
+       "25%     61513.250000    0.670869   966.410750  \n",
+       "50%     81651.000000    0.707367  1119.509000  \n",
+       "75%    108375.750000    0.734991  1308.389750  \n",
+       "max    278217.000000    0.835455  2697.753000  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.describe()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7203cead-8b9e-4e77-9803-26c604e5609a",
+   "id": "c34fd20b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -90,9 +384,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:craisins]",
+   "display_name": "craisins",
    "language": "python",
-   "name": "conda-env-craisins-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
