Added 2 references and in text citations.

--- a/crazy_raisins.ipynb
+++ b/crazy_raisins.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "Raisins are dried grapes although other small berries and fruit may be dried using the same methodology of raisins. Just like their undried form, raisins of different varieties may differ in taste, chewiness, sweetness, etc. The analysis below will attempt to predict which variety of raisins are based on data derived from multiple images taken of 900 samples. The dataset is obtained from the UCI database archive and contains numeric features all indicating the properties of the sampled raisin. If our model can accurately predict the species of raisins given it's measured properties, we can avoid eating raisins that are not to our preference."
+    "Raisins are dried grapes although other small berries and fruit may be dried using the same methodology of raisins. Just like their undried form, raisins of different varieties may differ in taste, chewiness, sweetness, etc. They provide a variety of health benefits which include: \"... a better diet quality and may reduce appetite.\"(Olmo-Cunillera et al. 1) The analysis below will attempt to predict which variety of raisins are based on data derived from multiple images taken of 900 samples. The dataset is obtained from the UCI database archive and contains numeric features all indicating the properties of the sampled raisin. If our model can accurately predict the species of raisins given it's measured properties, we can avoid eating raisins that are not to our preference."
    ]
   },
   {
@@ -597,6 +597,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e3b52296",
+   "metadata": {},
+   "source": [
+    "# Methods\n",
+    "## Data\n",
+    "The dataset used in this project is the digitized raisin images by İ̇lkay Çinar, Murat Koklu, and Sakir Tasdemir from Selcuck University. The data can be obtained from [[here](https://archive.ics.uci.edu/dataset/850/raisin)] and was imported through the ucimlrepo python library. Each row represents a measurement of a raisin belonging to either the Besni or Kecimen variety.\n",
+    "\n",
+    "## Analysis\n",
+    "The LogisticRegression algorithm was used to build the classification model to predict the species of a raisin given its measured shape properties. The data was split 75% and 25% to the training and test datasets respectively. We obtained an accuracy of 87.56% with our model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "10f7da17",
@@ -1078,6 +1091,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f4deae4e",
+   "metadata": {},
+   "source": [
+    "# Results and Discussion\n",
+    "We can see that the dataset is quite balanced and our confusion matrix shows that the model correctly predicts more kecimen raisins than besni. We may improve this model with more samples, hyperparameter optimization, and feature engineering."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "beaa75fa",
@@ -1133,6 +1155,17 @@
     "from sklearn.metrics import f1_score\n",
     "f1 = f1_score(y_test, y_pred, average='weighted')\n",
     "f1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c88ad083",
+   "metadata": {},
+   "source": [
+    "# Citations\n",
+    "Olmo-Cunillera, Alexandra et al. “Is Eating Raisins Healthy?.” Nutrients vol. 12,1 54. 24 Dec. 2019, doi:10.3390/nu12010054\n",
+    "\n",
+    "Wijayabahu, A.T., Waugh, S.G., Ukhanova, M. et al. Dietary raisin intake has limited effect on gut microbiota composition in adult volunteers. Nutr J 18, 14 (2019). https://doi.org/10.1186/s12937-019-0439-1\n"
    ]
   }
  ],
