--- a/crazy_raisins.ipynb
+++ b/crazy_raisins.ipynb
@@ -1171,9 +1171,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "craisins",
+   "display_name": "Python [conda env:craisins]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-craisins-py"
   },
   "language_info": {
    "codemirror_mode": {
