Update README.md and analysis notebook

--- a/crazy_raisins.ipynb
+++ b/crazy_raisins.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "source": [
     "## Summary\n",
-    "A simple classification analysis of two raisin species based on data derived from images."
+    "A simple classification analysis of two raisin varieties, Kecimen and Besni, based on data derived from images."
    ]
   },
   {
