Add data as .csv file

--- a/crazy_raisins.ipynb
+++ b/crazy_raisins.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ab10d082",
    "metadata": {
     "scrolled": true
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "1bf79cc5",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "dbe46c7e",
    "metadata": {},
    "outputs": [
@@ -110,143 +110,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "7203cead-8b9e-4e77-9803-26c604e5609a",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "Area",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "MajorAxisLength",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "MinorAxisLength",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "Eccentricity",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "ConvexArea",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "Extent",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "Perimeter",
-         "rawType": "float64",
-         "type": "float"
-        }
-       ],
-       "ref": "808bac86-6b17-498b-a2c5-24eaedeaf4ea",
-       "rows": [
-        [
-         "count",
-         "900.0",
-         "900.0",
-         "900.0",
-         "900.0",
-         "900.0",
-         "900.0",
-         "900.0"
-        ],
-        [
-         "mean",
-         "87804.12777777777",
-         "430.92995049844444",
-         "254.48813290322227",
-         "0.7815421500333333",
-         "91186.09",
-         "0.6995079264077777",
-         "1165.9066355555556"
-        ],
-        [
-         "std",
-         "39002.11139007148",
-         "116.03512062468943",
-         "49.98890170571764",
-         "0.09031840993160666",
-         "40769.29013198777",
-         "0.053468200288159295",
-         "273.7643154160196"
-        ],
-        [
-         "min",
-         "25387.0",
-         "225.629541",
-         "143.7108718",
-         "0.348729642",
-         "26139.0",
-         "0.379856115",
-         "619.074"
-        ],
-        [
-         "25%",
-         "59348.0",
-         "345.44289779999997",
-         "219.111126475",
-         "0.7417662540000001",
-         "61513.25",
-         "0.67086909675",
-         "966.41075"
-        ],
-        [
-         "50%",
-         "78902.0",
-         "407.80395115",
-         "247.84840865",
-         "0.798846044",
-         "81651.0",
-         "0.7073669579999999",
-         "1119.509"
-        ],
-        [
-         "75%",
-         "105028.25",
-         "494.187013975",
-         "279.8885746",
-         "0.84257102375",
-         "108375.75",
-         "0.73499141725",
-         "1308.38975"
-        ],
-        [
-         "max",
-         "235047.0",
-         "997.2919406",
-         "492.2752785",
-         "0.96212444",
-         "278217.0",
-         "0.835454545",
-         "2697.753"
-        ]
-       ],
-       "shape": {
-        "columns": 7,
-        "rows": 8
-       }
-      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -382,7 +251,7 @@
        "max    278217.000000    0.835455  2697.753000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "c34fd20b",
    "metadata": {},
    "outputs": [
@@ -410,23 +279,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-8f0d1bfc9ba2460085e9f5ca68774ff3.vega-embed {\n",
+       "  #altair-viz-795e3d71e2b441829023b290d4a9b7de.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-8f0d1bfc9ba2460085e9f5ca68774ff3.vega-embed details,\n",
-       "  #altair-viz-8f0d1bfc9ba2460085e9f5ca68774ff3.vega-embed details summary {\n",
+       "  #altair-viz-795e3d71e2b441829023b290d4a9b7de.vega-embed details,\n",
+       "  #altair-viz-795e3d71e2b441829023b290d4a9b7de.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-8f0d1bfc9ba2460085e9f5ca68774ff3\"></div>\n",
+       "<div id=\"altair-viz-795e3d71e2b441829023b290d4a9b7de\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-8f0d1bfc9ba2460085e9f5ca68774ff3\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-8f0d1bfc9ba2460085e9f5ca68774ff3\");\n",
+       "    if (outputDiv.id !== \"altair-viz-795e3d71e2b441829023b290d4a9b7de\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-795e3d71e2b441829023b290d4a9b7de\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -481,7 +350,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1195,6 +1064,16 @@
     "\n",
     "f1 = f1_score(y_test, y_pred, average='weighted')\n",
     "f1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2809afbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('data/raisin.csv')"
    ]
   },
   {
